# 3DLRF

./: CMakeLists.txt  FirstREADThis.txt  README.md  README.md~  ToDO
datasets/3D models/CVLab/Kinect/MeshRegistration/Doll/: Doll013_0.ply  Doll018_0.ply
datasets/3D models/CVLab/Kinect/MeshRegistration/Duck/: duck002_0.ply  duck007_0.ply  duck009_0.ply
datasets/3D models/CVLab/Kinect/MeshRegistration/Frog/: Frog001_0.ply  Frog004_0.ply  Frog011_0.ply  Frog012_0.ply  Frog013_0.ply
datasets/3D models/CVLab/Kinect/MeshRegistration/Mario/: mario009_0.ply  mario010_0.ply  mario011_0.ply
include/3DLRF/: 3DLRF.h  3DLRF_headers.h  3DLRF_visualization.h
include/Mfpfh/: Mfpfh_omp.h~  fpfh_low_dim.h  long_headers.h
include/Mrops/: cbshot_bits.h  cbshot_headers_bits.h  rops_low_dim.h  rops_low_dim.hpp  rops_low_dim.h~
include/Mshot/: cbshot_bits.h  cbshot_headers_bits.h  shot_low_dim.h  shot_low_dim.hpp  shot_low_dim_lrf.h  shot_low_dim_lrf.hpp  shot_low_dim_lrf.hpp~  shot_low_dim_lrf.h~
results/: 15dim_ROPS_ISS_for_3DLRF.txt~  BSHOT_0.01_0.10.txt~  LOWDIM_SHOT_for_3DLRF_ISS_RANSAC_0.03_NON_RECIPROCAL.txt~  M_12dim_FPFH_ISS_for_3DLRF.txt~  ROPS_ISS_for_3DLRF.txt~  SHOT_0.01_0.10.txt~
scripts/: 3DLRF_RRR.py  3DLRF_RRR.py~  BSHOT_SHOT_for_PATCH3D_eval.py~  Binarypatch3D_eval.py~  FPFH_for_PATCH3D.py~  ROPS_for_PATCH3D.py~  rops_low_dim_RRR.py~  shot_low_dim_RRR.py
src/: 3DLRF_RRR.cpp  3DLRF_testing.cpp  3DLRF_visualization.cpp  fpfh_low_dim.cpp  rops_low_dim.cpp  shot_low_dim.cpp  shot_low_dim.cpp~
(+78 files in other folders)
